# chatGPT_DNAC_analyzer

./: README.md  pyproject.toml
src/chatgpt_dnac_analyzer/: chatgpt_dnac_analyzer.py  script.py
